plugins {
    id 'java'
    id 'groovy'
    id 'idea'
    id 'eclipse'
    id 'maven-publish'
    id 'signing'
    id 'com.github.spotbugs' version '6.5.4'
    id 'org.owasp.dependencycheck' version '12.2.1'
}

group = "com.toastcoders"
archivesBaseName = "yavijava"
version = '9.0-SNAPSHOT'
ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
targetCompatibility = JavaVersion.VERSION_21
sourceCompatibility = JavaVersion.VERSION_21

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.dom4j:dom4j:2.1.4'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    testRuntimeOnly 'ch.qos.logback:logback-classic:1.5.32'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.5.2'
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    testImplementation 'javax.servlet:javax.servlet-api:3.1.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.spockframework:spock-core:2.4-groovy-4.0'
    testImplementation 'org.apache.groovy:groovy-all:4.0.24'
    testImplementation 'net.bytebuddy:byte-buddy:1.17.5'
    testRuntimeOnly 'org.objenesis:objenesis:3.3'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.13.0'
}

sourceSets {
    main {
        java {
        }
    }

    intTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
        }
        groovy {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
        }
    }

    test {
        java {
        }
        groovy {
        }
    }
}

configurations {
    intTestImplementation.extendsFrom testImplementation
    intTestRuntimeOnly.extendsFrom testRuntimeOnly
}

task intTest(type: Test) {
    description = "Run integration tests (located in src/intTest/...)."
    testClassesDirs = project.sourceSets.intTest.output.classesDirs
    classpath = project.sourceSets.intTest.runtimeClasspath
}

test {
    useJUnitPlatform()
    // Needed for XmlGenDom to set detailMessage on JDK exception classes via reflection
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    testLogging {
        events 'started', 'passed', 'failed'
    }
}

java {
    withJavadocJar()
    withSourcesJar()
}

// --- SpotBugs static analysis (runs as part of `check`) ---
spotbugs {
    ignoreFailures = false
    effort = com.github.spotbugs.snom.Effort.MAX
    excludeFilter = file('config/spotbugs/exclude.xml')
}

spotbugsMain {
    reports {
        html.required = true
        text.required = true
        xml.required = false
    }
}

// Test/intTest sources are not gated — too much noise for minimal benefit.
spotbugsTest.enabled = false
spotbugsIntTest.enabled = false

// --- OWASP Dependency-Check (run explicitly: ./gradlew dependencyCheckAnalyze) ---
// Not wired into `check` because it requires downloading the NVD database (~200 MB).
// Run periodically in CI as a separate job.
// Provide NVD API key via -PnvdApiKey=<key> or gradle.properties for higher rate limits.
dependencyCheck {
    failBuildOnCVSS = 7
    suppressionFile = 'config/owasp/suppressions.xml'
    nvd {
        apiKey = findProperty('nvdApiKey') ?: ''
    }
}

signing {
    required { isReleaseVersion && gradle.taskGraph.hasTask("publish") }
    sign publishing.publications
}

def ossrhUsername = findProperty('ossrhUsername') ?: ''
def ossrhPassword = findProperty('ossrhPassword') ?: ''

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = 'yavijava'
            from components.java

            pom {
                name = 'yavijava'
                packaging = 'jar'
                description = 'Java library for VMware vSphere'
                url = 'https://github.com/yavijava/yavijava'

                scm {
                    connection = 'scm:git:https://github.com/yavijava/yavijava.git'
                    developerConnection = 'scm:git:https://github.com/yavijava/yavijava.git'
                    url = 'https://github.com/yavijava/yavijava'
                }

                licenses {
                    license {
                        name = 'BSD'
                        url = 'http://opensource.org/licenses/BSD-3-Clause'
                    }
                }

                developers {
                    developer {
                        id = 'michaelrice'
                        name = 'Michael Rice'
                        email = 'michael@michaelrice.org'
                    }
                }
            }
        }
    }

    repositories {
        maven {
            def releasesUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
            def snapshotsUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
            url = version.endsWith('SNAPSHOT') ? snapshotsUrl : releasesUrl
            credentials {
                username = ossrhUsername
                password = ossrhPassword
            }
        }
    }
}
